_includes/css/agency.css
/* ... */
.btn-primary .badge {
    color: #{{ site.color.primary }};
    background-color: #fff;
}

.btn-xl {
    padding: 20px 40px;
    border-color: #484848;
    border-radius: 3px;
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 18px;
    font-weight: 700;
    color: #fff;
    background: linear-gradient(to bottom, #484848 0%, #333 100%) repeat scroll 0% 0% transparent;
}

.btn-xl:hover,
.btn-xl:focus,
.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    border-color: #{{ site.color.primary }};
    color: #fff;
    background-color: #{{ site.color.secondary }};
}

.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    background-image: none;
}

.btn-xl.disabled,
.btn-xl[disabled],
fieldset[disabled] .btn-xl,
.btn-xl.disabled:hover,
.btn-xl[disabled]:hover,
fieldset[disabled] .btn-xl:hover,
.btn-xl.disabled:focus,
.btn-xl[disabled]:focus,
fieldset[disabled] .btn-xl:focus,
.btn-xl.disabled:active,
.btn-xl[disabled]:active,
fieldset[disabled] .btn-xl:active,
.btn-xl.disabled.active,
.btn-xl[disabled].active,
fieldset[disabled] .btn-xl.active {
    border-color: #{{ site.color.primary }};
    background-color: #{{ site.color.primary }};
}

.btn-xl .badge {
    color: #{{ site.color.primary }};
    background-color: #fff;
}

.navbar-default {
    border-color: transparent;
    background-color: #222;
}

.navbar-default .navbar-brand {
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    color: #{{ site.color.primary }};
}

.navbar-secondary {
    
    font-size: 15px !important;
    text-transform: uppercase;
    color: white!important;
    font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
    margin-left: 0px !important;
}

.navbar-secondary:hover{
    color: #FED136!important;
}

.navbar-icon {
    font-family: FontAwesome !important;
    font-size: 2em !important;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
    color: #{{ site.color.secondary }};
}

.navbar-default .navbar-collapse {
    border-color: rgba(255,255,255,.02);
}

.navbar-default .navbar-toggle {
    border-color: #{{ site.color.primary }};
    background-color: #{{ site.color.primary }};
}

.col-lg-8 {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
}


/*#WhatsNew {
    padding: 80px;
}*/

.blackLink {
    color: black;
}

.resiliencyText p{
    font-size: 150%;
    text-align: left;
}

.resiliencyText h3{
    font-size: 200%;
    text-align: left;
}

.icon:visited {
    color: white !important;
}

.icon:hover {
    color: #FED136 !important;*/
}

.exploreImage {
    width: 100%;
}

#excelImg {
   
    width: 100%;
}

#studioImg {
    
    width: 100%;
}

#consoleImg {
    
    width: 100%;
}

#cloudImg {
    /*content: url("../img/explore/cloudScreen.jpg");*/
    width: 100%;
}
.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #{{ site.color.primary }};
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 400;
    letter-spacing: 1px;
    color: #fff;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    color: #{{ site.color.primary }};
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #{{ site.color.primary }};
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #{{ site.color.secondary }};
}

@media(min-width:768px) {
    .navbar-default {
        padding: 25px 0;
        border: 0;
        background-color: transparent;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color: #484848;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    } 
    
    .navbar-default.navbar-shrink .navbar-secondary {
    
        
    }
}

header {
    text-align: left;
    color: #fff;
    background-attachment: scroll;
    background-image: url(../img/iStock.jpg);
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

header .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;
}

header .intro-text .intro-lead-in {
    margin-bottom: 25px;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 22px;
    font-style: italic;
    line-height: 22px;
    color: white;
    /*-webkit-text-fill-color: #484848;
    -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #fed136;*/
    
}

header .intro-text .intro-heading {
    margin-bottom: 25px;
    text-transform: uppercase;
    font-family: Times,Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 150px;
    font-weight: 700;
    line-height: 50px;
    color: black;
    -webkit-text-fill-color: white;
    -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
}

#mainLogo{
    width:45% !important;
}

.videoWrapper {
	position: relative;
	padding-bottom: 56.25%; /* 16:9 */
	padding-top: 25px;
	height: 0;
}
.videoWrapper iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}
/* ... */

